# ftnini

./: CMakeLists.txt  INIReader.h  README.md  fort15.ini  ftnTest.F90  ftnini.F90  ftnini.cpp  ftnini.pro
src/: ftnini.F90  ftnini.cpp  inifile.h
testing/: ftnTest.F90
